<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyChat</string>
    <string name="app_messages">MyChat : messages</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="form">Formulaire d identification</string>
    <string name="vider">Vider</string>
    <string name="envoyer">Envoyer !</string>

    <string name="liste">Liste </string>
    <string name="envoyerMessage">Envoyer un message</string>

</resources>
